# 4-knowbase-ai

./: .env.example  .gitignore  00-ARQUITECTURA-PROYECTO.md  01-BRIEFING.md  02-ARQUITECTURA-SITIO.md  AGENTS.md  CHECKLIST-CONTROL.md  EVIDENCE.md  MATRIZ-BACKEND.md  MOTION-STRATEGY.md  Makefile  README.md  REDO-TRACKING.md  ROTOS_REPORT.md  SECRETS_REPORT.md  docker-compose.yml  package.json  vercel.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: codeql.yml  quality-gate.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routers/: admin.py  auth.py  chat.py  ingest.py  library.py  memory.py  search.py  sharing.py  smart_folders.py
backend/app/core/: config.py  database.py  deps.py  security.py  telemetry.py
backend/app/models/: __init__.py  conversation.py  document.py  memory.py  permission.py  smart_folder.py  user.py
backend/app/services/: documents.py  user_service.py
backend/app/services/analytics/: __init__.py  telemetry.py
backend/app/services/embeddings/: local.py  provider.py
backend/app/services/ingestion/: audio.py  chunker.py  parsers.py  pipeline.py
backend/app/services/memory/: __init__.py  extractor.py  store.py
backend/app/services/rag/: chain.py
backend/app/services/retrieval/: __init__.py  hybrid.py  reranker.py
backend/app/services/security/: __init__.py  trimming.py
backend/app/services/vector_store/: pgvector_store.py  qdrant_store.py
backend/app/worker/: celery_app.py
backend/app/worker/tasks/: ingest_task.py
evidence/functional-pass/: api-run-20260316-123807-summary.txt  api-run-20260316-123807.json  docker-compose-ps.txt  health-body.json  health-http.txt
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/lib/: api.ts  design-tokens.ts
scripts/: check.mjs  test-smoke.mjs  test.mjs
(+11 files in other folders)
